// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput when no properties are set matches snapshot 1`] = `
<div
  className="tm-search-input"
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder=""
    tabIndex="0"
    title=""
    type="text"
    value=""
  />
  <div
    aria-label=""
    className="tm-button tm-bt-clear"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={0}
    title=""
  >
    <svg
      fill="currentColor"
      focusable={false}
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </div>
  <div
    aria-label=""
    className="tm-button tm-bt-search"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
    title=""
  >
    search
  </div>
</div>
`;

exports[`SearchInput when properties are set matches snapshot  1`] = `
<div
  className="tm-foo"
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder="gux"
    tabIndex="0"
    title=""
    type="text"
    value="bar"
  />
  <div
    aria-label=""
    className="tm-button tm-bt-clear"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
    title=""
  >
    <svg
      fill="currentColor"
      focusable={false}
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </div>
  <div
    aria-label=""
    className="tm-button tm-bt-search"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
    title=""
  >
    search
  </div>
</div>
`;

exports[`SearchInput when properties are set matches snapshot  2`] = `
<div
  className="tm-foo tm-focus"
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder="gux"
    tabIndex="0"
    title=""
    type="text"
    value="bar"
  />
  <div
    aria-label=""
    className="tm-button tm-bt-clear"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
    title=""
  >
    <svg
      fill="currentColor"
      focusable={false}
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </div>
  <div
    aria-label=""
    className="tm-button tm-bt-search"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
    title=""
  >
    search
  </div>
</div>
`;

exports[`SearchInput when properties are set matches snapshot when className is undefined  1`] = `
<div
  className="tm-search-input tm-focus"
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder=""
    tabIndex="0"
    title=""
    type="text"
    value=""
  />
  <div
    aria-label=""
    className="tm-button tm-bt-clear"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={0}
    title=""
  >
    <svg
      fill="currentColor"
      focusable={false}
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </div>
  <div
    aria-label=""
    className="tm-button tm-bt-search"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
    title=""
  >
    search
  </div>
</div>
`;
